# ML-Project-End-to-end

./: pyproject.toml  requirements.txt  requirments.txt  setup.py
Notebook/: EDA.ipynb  Model_training.ipynb
Notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Notebook/catboost_info/learn/: events.out.tfevents
source/: logger.py
source/component/: exception.py
