[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
description = "Machine Learning Project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "skhan", email = "skhan0827779@gmail.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
]

[tool.setuptools]
packages = ["source"]

